// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Component Button renders and handle click 1`] = `
<body>
  <div>
    <button
      class="gds-button-content"
      color="secondary"
      data-testid="DATA-TEST-ID"
      tabindex="0"
      type="submit"
    >
      <div
        class="button-icon-container"
      >
        <i
          class="button-icon icon"
          icon="fal,paper-plane"
        />
      </div>
      <div
        class="button-label-container"
      >
        LABEL
      </div>
    </button>
  </div>
</body>
`;

exports[`Button Component Button renders when loading 1`] = `
<body>
  <div>
    <button
      class="gds-button-content"
      color="primary"
      data-testid="DATA-TEST-ID"
      disabled=""
      tabindex="-1"
      type="button"
    >
      <div
        class="button-icon-container"
      >
        <svg
          aria-hidden="true"
          class="icon gds-loader size-lg button-icon"
          focusable="false"
          height="50"
          icon="fal,spinner"
          preserveAspectRatio="xMidYMid"
          role="img"
          style="background: transparent;"
          viewBox="0 0 100 100"
          width="50"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="50"
            cy="50"
            fill="transparent"
            r="30"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-width="10"
          >
            <animatetransform
              attributeName="transform"
              dur="2s"
              keyTimes="0;0.5;1"
              repeatCount="indefinite"
              type="rotate"
              values="0 50 50;180 50 50;720 50 50"
            />
            <animate
              attributeName="stroke-dasharray"
              dur="2s"
              keyTimes="0;0.5;1"
              repeatCount="indefinite"
              values="20 150; 150 20; 20 150"
            />
          </circle>
        </svg>
      </div>
      <div
        class="button-label-container"
      >
        LABEL
      </div>
    </button>
  </div>
</body>
`;

exports[`Button Component Button renders with list and handle open menu and click on item 1`] = `
<body>
  <div>
    <button
      class="gds-button-content"
      color="secondary"
      data-testid="MAIN-BUTTON"
      tabindex="0"
      type="button"
    >
      <div
        class="button-label-container"
      >
        Menu button
      </div>
      <div
        class="button-menu-control-container"
      >
        <i
          class="button-icon icon"
          icon="fal,pipe"
        />
        <i
          class="button-icon icon"
          icon="fas,caret-down"
        />
      </div>
    </button>
  </div>
  <div
    id="root-portal-id"
  >
    <div>
      <div
        class="szh-menu-container"
        style="position: relative;"
      >
        <ul
          aria-label="Menu"
          class="szh-menu szh-menu--state-closed szh-menu--dir-bottom button-menu"
          role="menu"
          style="margin: 0px; display: none; position: absolute; left: 0px; top: 0px;"
          tabindex="-1"
        >
          <div
            style="position: absolute; left: 0px; top: 0px;"
            tabindex="-1"
          />
          <li
            class="szh-menu__item"
            data-testid="BUTTON1"
            role="menuitem"
            tabindex="-1"
          >
            Label 1
          </li>
          <li
            class="szh-menu__divider"
            role="separator"
          />
          <li
            class="szh-menu__item"
            data-testid="BUTTON2"
            role="menuitem"
            tabindex="-1"
          >
            Label 2
          </li>
        </ul>
      </div>
    </div>
  </div>
</body>
`;

exports[`Button Component Button renders with list and handle open menu and click on item 2`] = `
<body>
  <div>
    <button
      class="gds-button-content"
      color="secondary"
      data-testid="MAIN-BUTTON"
      tabindex="0"
      type="button"
    >
      <div
        class="button-label-container"
      >
        Menu button
      </div>
      <div
        class="button-menu-control-container"
      >
        <i
          class="button-icon icon"
          icon="fal,pipe"
        />
        <i
          class="button-icon icon"
          icon="fas,caret-down"
        />
      </div>
    </button>
  </div>
  <div
    id="root-portal-id"
  >
    <div>
      <div
        class="szh-menu-container"
        style="position: relative;"
      >
        <ul
          aria-label="Menu"
          class="szh-menu szh-menu--state-open szh-menu--dir-bottom button-menu"
          role="menu"
          style="margin: 0px; position: absolute; left: 0px; top: 0px;"
          tabindex="-1"
        >
          <div
            style="position: absolute; left: 0px; top: 0px;"
            tabindex="-1"
          />
          <li
            class="szh-menu__item"
            data-testid="BUTTON1"
            role="menuitem"
            tabindex="-1"
          >
            Label 1
          </li>
          <li
            class="szh-menu__divider"
            role="separator"
          />
          <li
            class="szh-menu__item"
            data-testid="BUTTON2"
            role="menuitem"
            tabindex="-1"
          >
            Label 2
          </li>
        </ul>
      </div>
    </div>
  </div>
</body>
`;

exports[`Button Component Button renders with list and handle open menu and click on item 3`] = `
<body>
  <div>
    <button
      class="gds-button-content"
      color="secondary"
      data-testid="MAIN-BUTTON"
      tabindex="0"
      type="button"
    >
      <div
        class="button-label-container"
      >
        Menu button
      </div>
      <div
        class="button-menu-control-container"
      >
        <i
          class="button-icon icon"
          icon="fal,pipe"
        />
        <i
          class="button-icon icon"
          icon="fas,caret-down"
        />
      </div>
    </button>
  </div>
  <div
    id="root-portal-id"
  >
    <div>
      <div
        class="szh-menu-container"
        style="position: relative;"
      >
        <ul
          aria-label="Menu"
          class="szh-menu szh-menu--state-closed szh-menu--dir-bottom button-menu"
          role="menu"
          style="margin: 0px; position: absolute; left: 0px; top: 0px; display: none;"
          tabindex="-1"
        >
          <div
            style="position: absolute; left: 0px; top: 0px;"
            tabindex="-1"
          />
          <li
            class="szh-menu__item"
            data-testid="BUTTON1"
            role="menuitem"
            tabindex="-1"
          >
            Label 1
          </li>
          <li
            class="szh-menu__divider"
            role="separator"
          />
          <li
            class="szh-menu__item"
            data-testid="BUTTON2"
            role="menuitem"
            tabindex="-1"
          >
            Label 2
          </li>
        </ul>
      </div>
    </div>
  </div>
</body>
`;

exports[`Button Component Button renders with list and handle open menu and close on click outside 1`] = `
<body>
  <div>
    <button
      class="gds-button-content"
      color="secondary"
      data-testid="MAIN-BUTTON"
      tabindex="0"
      type="button"
    >
      <div
        class="button-label-container"
      >
        Menu button
      </div>
      <div
        class="button-menu-control-container"
      >
        <i
          class="button-icon icon"
          icon="fal,pipe"
        />
        <i
          class="button-icon icon"
          icon="fas,caret-down"
        />
      </div>
    </button>
  </div>
  <div
    id="root-portal-id"
  >
    <div>
      <div
        class="szh-menu-container"
        style="position: relative;"
      >
        <ul
          aria-label="Menu"
          class="szh-menu szh-menu--state-closed szh-menu--dir-bottom button-menu"
          role="menu"
          style="margin: 0px; display: none; position: absolute; left: 0px; top: 0px;"
          tabindex="-1"
        >
          <div
            style="position: absolute; left: 0px; top: 0px;"
            tabindex="-1"
          />
          <li
            class="szh-menu__item"
            role="menuitem"
            tabindex="-1"
          >
            Label 1
          </li>
          <li
            class="szh-menu__divider"
            role="separator"
          />
          <li
            class="szh-menu__item"
            role="menuitem"
            tabindex="-1"
          >
            Label 2
          </li>
        </ul>
      </div>
    </div>
  </div>
</body>
`;

exports[`Button Component Button renders with list and handle open menu and close on click outside 2`] = `
<body>
  <div>
    <button
      class="gds-button-content"
      color="secondary"
      data-testid="MAIN-BUTTON"
      tabindex="0"
      type="button"
    >
      <div
        class="button-label-container"
      >
        Menu button
      </div>
      <div
        class="button-menu-control-container"
      >
        <i
          class="button-icon icon"
          icon="fal,pipe"
        />
        <i
          class="button-icon icon"
          icon="fas,caret-down"
        />
      </div>
    </button>
  </div>
  <div
    id="root-portal-id"
  >
    <div>
      <div
        class="szh-menu-container"
        style="position: relative;"
      >
        <ul
          aria-label="Menu"
          class="szh-menu szh-menu--state-open szh-menu--dir-bottom button-menu"
          role="menu"
          style="margin: 0px; position: absolute; left: 0px; top: 0px;"
          tabindex="-1"
        >
          <div
            style="position: absolute; left: 0px; top: 0px;"
            tabindex="-1"
          />
          <li
            class="szh-menu__item"
            role="menuitem"
            tabindex="-1"
          >
            Label 1
          </li>
          <li
            class="szh-menu__divider"
            role="separator"
          />
          <li
            class="szh-menu__item"
            role="menuitem"
            tabindex="-1"
          >
            Label 2
          </li>
        </ul>
      </div>
    </div>
  </div>
</body>
`;

exports[`Button Component Button renders with list and handle open menu and close on click outside 3`] = `
<body>
  <div>
    <button
      class="gds-button-content"
      color="secondary"
      data-testid="MAIN-BUTTON"
      tabindex="0"
      type="button"
    >
      <div
        class="button-label-container"
      >
        Menu button
      </div>
      <div
        class="button-menu-control-container"
      >
        <i
          class="button-icon icon"
          icon="fal,pipe"
        />
        <i
          class="button-icon icon"
          icon="fas,caret-down"
        />
      </div>
    </button>
  </div>
  <div
    id="root-portal-id"
  >
    <div>
      <div
        class="szh-menu-container"
        style="position: relative;"
      >
        <ul
          aria-label="Menu"
          class="szh-menu szh-menu--state-open szh-menu--dir-bottom button-menu"
          role="menu"
          style="margin: 0px; position: absolute; left: 0px; top: 0px;"
          tabindex="-1"
        >
          <div
            style="position: absolute; left: 0px; top: 0px;"
            tabindex="-1"
          />
          <li
            class="szh-menu__item"
            role="menuitem"
            tabindex="-1"
          >
            Label 1
          </li>
          <li
            class="szh-menu__divider"
            role="separator"
          />
          <li
            class="szh-menu__item"
            role="menuitem"
            tabindex="-1"
          >
            Label 2
          </li>
        </ul>
      </div>
    </div>
  </div>
</body>
`;

exports[`Button Component Button renders with popover 1`] = `
<body>
  <div>
    <button
      class="gds-button-content"
      color="secondary"
      data-testid="MAIN-BUTTON"
      tabindex="0"
      type="button"
    >
      <div
        class="button-label-container"
      >
        Tooltip button
      </div>
    </button>
  </div>
  <div
    id="root-portal-id"
  >
    <div>
      <div
        class="szh-menu-container"
        style="position: relative;"
      >
        <ul
          aria-label="Menu"
          class="szh-menu szh-menu--state-closed szh-menu--dir-top"
          role="menu"
          style="margin: 0px; display: none; position: absolute; left: 0px; top: 0px;"
          tabindex="-1"
        >
          <div
            style="position: absolute; left: 0px; top: 0px;"
            tabindex="-1"
          />
          <div
            class="szh-menu__arrow szh-menu__arrow--dir-top"
            style="position: absolute;"
          />
          <div
            class="gds-popover-container"
          >
            <div
              class="popover-title"
            >
              POPOVER
            </div>
            <div
              class="popover-buttons"
            >
              <button
                class="gds-button-content"
                color="primary"
                data-testid="BUTTON1"
                tabindex="0"
                type="button"
              >
                <div
                  class="button-icon-container"
                >
                  <i
                    class="button-icon icon"
                    icon="fal,paper-plane"
                  />
                </div>
                <div
                  class="button-label-container"
                >
                  Button 1
                </div>
              </button>
              <button
                class="gds-button-content"
                color="secondary"
                data-testid="BUTTON2"
                tabindex="0"
                type="button"
              >
                <div
                  class="button-label-container"
                >
                  Button 2
                </div>
              </button>
            </div>
          </div>
        </ul>
      </div>
    </div>
  </div>
</body>
`;

exports[`Button Component Button renders with popover 2`] = `
<body>
  <div>
    <button
      class="gds-button-content"
      color="secondary"
      data-testid="MAIN-BUTTON"
      tabindex="0"
      type="button"
    >
      <div
        class="button-label-container"
      >
        Tooltip button
      </div>
    </button>
  </div>
  <div
    id="root-portal-id"
  >
    <div>
      <div
        class="szh-menu-container"
        style="position: relative;"
      >
        <ul
          aria-label="Menu"
          class="szh-menu szh-menu--state-open szh-menu--dir-top"
          role="menu"
          style="margin: 0px; position: absolute; left: 0px; top: 0px;"
          tabindex="-1"
        >
          <div
            style="position: absolute; left: 0px; top: 0px;"
            tabindex="-1"
          />
          <div
            class="szh-menu__arrow szh-menu__arrow--dir-top"
            style="position: absolute; left: 0px;"
          />
          <div
            class="gds-popover-container"
          >
            <div
              class="popover-title"
            >
              POPOVER
            </div>
            <div
              class="popover-buttons"
            >
              <button
                class="gds-button-content"
                color="primary"
                data-testid="BUTTON1"
                tabindex="0"
                type="button"
              >
                <div
                  class="button-icon-container"
                >
                  <i
                    class="button-icon icon"
                    icon="fal,paper-plane"
                  />
                </div>
                <div
                  class="button-label-container"
                >
                  Button 1
                </div>
              </button>
              <button
                class="gds-button-content"
                color="secondary"
                data-testid="BUTTON2"
                tabindex="0"
                type="button"
              >
                <div
                  class="button-label-container"
                >
                  Button 2
                </div>
              </button>
            </div>
          </div>
        </ul>
      </div>
    </div>
  </div>
</body>
`;

exports[`Button Component Button renders with popover 3`] = `
<body>
  <div>
    <button
      class="gds-button-content"
      color="secondary"
      data-testid="MAIN-BUTTON"
      tabindex="0"
      type="button"
    >
      <div
        class="button-label-container"
      >
        Tooltip button
      </div>
    </button>
  </div>
  <div
    id="root-portal-id"
  >
    <div>
      <div
        class="szh-menu-container"
        style="position: relative;"
      >
        <ul
          aria-label="Menu"
          class="szh-menu szh-menu--state-closed szh-menu--dir-top"
          role="menu"
          style="margin: 0px; position: absolute; left: 0px; top: 0px; display: none;"
          tabindex="-1"
        >
          <div
            style="position: absolute; left: 0px; top: 0px;"
            tabindex="-1"
          />
          <div
            class="szh-menu__arrow szh-menu__arrow--dir-top"
            style="position: absolute; left: 0px;"
          />
          <div
            class="gds-popover-container"
          >
            <div
              class="popover-title"
            >
              POPOVER
            </div>
            <div
              class="popover-buttons"
            >
              <button
                class="gds-button-content"
                color="primary"
                data-testid="BUTTON1"
                tabindex="0"
                type="button"
              >
                <div
                  class="button-icon-container"
                >
                  <i
                    class="button-icon icon"
                    icon="fal,paper-plane"
                  />
                </div>
                <div
                  class="button-label-container"
                >
                  Button 1
                </div>
              </button>
              <button
                class="gds-button-content"
                color="secondary"
                data-testid="BUTTON2"
                tabindex="0"
                type="button"
              >
                <div
                  class="button-label-container"
                >
                  Button 2
                </div>
              </button>
            </div>
          </div>
        </ul>
      </div>
    </div>
  </div>
</body>
`;

exports[`Button Component Button renders with popover without buttons 1`] = `
<body>
  <div>
    <button
      class="gds-button-content"
      color="secondary"
      data-testid="MAIN-BUTTON"
      tabindex="0"
      type="button"
    >
      <div
        class="button-label-container"
      >
        Tooltip button
      </div>
    </button>
  </div>
  <div
    id="root-portal-id"
  >
    <div>
      <div
        class="szh-menu-container"
        style="position: relative;"
      >
        <ul
          aria-label="Menu"
          class="szh-menu szh-menu--state-closed szh-menu--dir-top"
          role="menu"
          style="margin: 0px; display: none; position: absolute; left: 0px; top: 0px;"
          tabindex="-1"
        >
          <div
            style="position: absolute; left: 0px; top: 0px;"
            tabindex="-1"
          />
          <div
            class="szh-menu__arrow szh-menu__arrow--dir-top"
            style="position: absolute;"
          />
          <div
            class="gds-popover-container"
          >
            <div
              class="popover-title"
            >
              POPOVER
            </div>
            <div
              class="popover-buttons"
            />
          </div>
        </ul>
      </div>
    </div>
  </div>
</body>
`;

exports[`Button Component Button renders with popover without buttons 2`] = `
<body>
  <div>
    <button
      class="gds-button-content"
      color="secondary"
      data-testid="MAIN-BUTTON"
      tabindex="0"
      type="button"
    >
      <div
        class="button-label-container"
      >
        Tooltip button
      </div>
    </button>
  </div>
  <div
    id="root-portal-id"
  >
    <div>
      <div
        class="szh-menu-container"
        style="position: relative;"
      >
        <ul
          aria-label="Menu"
          class="szh-menu szh-menu--state-open szh-menu--dir-top"
          role="menu"
          style="margin: 0px; position: absolute; left: 0px; top: 0px;"
          tabindex="-1"
        >
          <div
            style="position: absolute; left: 0px; top: 0px;"
            tabindex="-1"
          />
          <div
            class="szh-menu__arrow szh-menu__arrow--dir-top"
            style="position: absolute; left: 0px;"
          />
          <div
            class="gds-popover-container"
          >
            <div
              class="popover-title"
            >
              POPOVER
            </div>
            <div
              class="popover-buttons"
            />
          </div>
        </ul>
      </div>
    </div>
  </div>
</body>
`;

exports[`Button Component Button renders with popover without buttons 3`] = `
<body>
  <div>
    <button
      class="gds-button-content"
      color="secondary"
      data-testid="MAIN-BUTTON"
      tabindex="0"
      type="button"
    >
      <div
        class="button-label-container"
      >
        Tooltip button
      </div>
    </button>
  </div>
  <div
    id="root-portal-id"
  >
    <div>
      <div
        class="szh-menu-container"
        style="position: relative;"
      >
        <ul
          aria-label="Menu"
          class="szh-menu szh-menu--state-closed szh-menu--dir-top"
          role="menu"
          style="margin: 0px; position: absolute; left: 0px; top: 0px; display: none;"
          tabindex="-1"
        >
          <div
            style="position: absolute; left: 0px; top: 0px;"
            tabindex="-1"
          />
          <div
            class="szh-menu__arrow szh-menu__arrow--dir-top"
            style="position: absolute; left: 0px;"
          />
          <div
            class="gds-popover-container"
          >
            <div
              class="popover-title"
            >
              POPOVER
            </div>
            <div
              class="popover-buttons"
            />
          </div>
        </ul>
      </div>
    </div>
  </div>
</body>
`;

exports[`Button Component Button renders with tooltip 1`] = `
<body>
  <div>
    <button
      class="gds-button-content"
      color="secondary"
      tabindex="0"
      type="button"
    >
      <div
        class="button-label-container"
      >
        Tooltip button
      </div>
    </button>
  </div>
</body>
`;

exports[`Button Component Button renders without label and icon 1`] = `
<body>
  <div />
</body>
`;
